fix(header): fix header colors, spacings and add index

--- a/app/javascript/components/SearchHeader/SearchHeader.scss
+++ b/app/javascript/components/SearchHeader/SearchHeader.scss
@@ -38,7 +38,7 @@ $headerHeight: 60px;
   }
 
   &_label {
-    color: white;
+    color: #000000;
     font-size: 18px;
     line-height: 1;
   }
@@ -79,7 +79,7 @@ $headerHeight: 60px;
     a {
       display: flex;
       align-items: center;
-      color: white;
+      color: #000000;
     }
   }
 
