--- a/app/javascript/src/variables.scss
+++ b/app/javascript/src/variables.scss
@@ -4,4 +4,5 @@ $spacing-base: 4px;
 $spacing-small: 2 * $spacing-base;
 $spacing-medium: 4 * $spacing-base;
 $spacing-large: 6 * $spacing-base;
+$spacing-xlarge: 8 * $spacing-base;
 
